fixed selection bar sticking outside the form

--- a/static/css/onderzoeksvragen_aanmaken.css
+++ b/static/css/onderzoeksvragen_aanmaken.css
@@ -48,7 +48,7 @@ form {
     background-color: white;
     padding: 30px;
     border-radius: 8px;
-    max-width: 50%;
+    max-width: 40%;
     margin: 50px auto;
 }
 
@@ -73,7 +73,7 @@ textarea::placeholder {
 }
 
 select {
-    width: 250px;
+    width: 70%;
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 7px;
